--- a/scavenger/client/index.html
+++ b/scavenger/client/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>Cary Citizen 2016 Scavenger Hunt!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
