work on login page styling

--- a/scavenger/client/index.html
+++ b/scavenger/client/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body style="font-size:16px">
   {{> sAlert}}
   {{> App_body}}
 </body>
